--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,6 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -23,12 +20,6 @@ main {
   padding: 50px 30px;
 }
 :root {
-  --primary: #8c54ff;
-  --secondary: #f3a847;
-  --tertiary: #b12704;
-  --light: #fafafa;
-  --dark: #000000;
-  --darker: #111111;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
@@ -47,9 +38,12 @@ body {
 .header-image {
   background-position: 52% 30%;
   background-image: url("./assets/cover/cover-image.png");
-  height: 350px;
-  background-size: 170%;
-  filter: grayscale(80);
+  background-size: 100%;
+  filter: grayscale(20);
+}
+
+@media screen {
+  
 }
 
 /* body {
